.bt, refactor colors, fix container z-index, remove .tform

--- a/src/v2/v2-icons-clip.css
+++ b/src/v2/v2-icons-clip.css
@@ -2,7 +2,7 @@
 [class*="icon-"]:not(:empty):not(.empty):before {margin-right:var(--icon-mar, .3em);}
 
 /* complex scaling is needed because path() can be defined only in px */
-[class*="icon-"] {--w:16;--p:path("M8 4l4 4,-4 4,-4-4z");/*overflow:hidden;*//*filter:drop-shadow(0 0 .1em var(--text));*/}
+[class*="icon-"] {z-index:1;--w:16;--p:path("M8 4l4 4,-4 4,-4-4z");/*overflow:hidden;*//*filter:drop-shadow(0 0 .1em var(--text));*/}
 [class*="icon-"]:before {content:'';display:inline-block;width:1em;height:1em;vertical-align:var(--icon-vert, -10%);}
 [class*="icon-"]:before {
   --sc: calc(var(--font-scale, 1) * var(--fsz, 1) * 16 / var(--w) * var(--icon-scale, 1));
@@ -12,7 +12,10 @@
   outline: 20em solid currentColor;
   /*box-shadow:0 0 0 20em #c00;*/
   clip-path: var(--p);
-  
+  /*
+  position:relative;
+  z-index:1;
+  */
 }
 
 .icon-menu {--w:7;--p:path("M.5 1h6v1h-6zm0 2h6v1h-6zm0 2h6v1h-6z");}
